--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -1,39 +1,180 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>HN Clone — Kotlin/Compose Web</title>
+    <title>Bazaar News</title>
     <style>
-      :root { --fg: #222; --bg: #fff; --accent: #ff6600; --muted: #666; }
-      body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif; color: var(--fg); background: var(--bg); }
-      a { color: var(--fg); text-decoration: none; }
-      a:hover { text-decoration: underline; }
-      .container { max-width: 960px; margin: 0 auto; padding: 0 12px; }
-      .navbar { background: var(--accent); color: white; }
-      .navbar a { color: white; }
-      .navbar .brand { font-weight: 700; }
-      .card { background: white; border: 1px solid #eee; border-radius: 12px; padding: 16px; box-shadow: 0 1px 2px rgba(0,0,0,0.04); }
-      .row { display: flex; gap: 12px; align-items: center; }
-      .spacer { flex: 1; }
-      .muted { color: var(--muted); }
-      .btn { padding: 8px 12px; border-radius: 999px; border: 1px solid rgba(0,0,0,0.1); background: white; cursor: pointer; font-weight: 600; }
-      .btn:hover { background: #f5f5f5; }
-      .input, .textarea { width: 100%; padding: 8px 12px; border-radius: 10px; border: 1px solid #ddd; }
-      .stack { display: grid; gap: 12px; }
-      .list { display: grid; gap: 8px; }
-      .score { font-weight: 700; }
-      .small { font-size: 12px; }
-      .linkish { color: #0645AD; }
-      .tag { background: #f0f0f0; padding: 2px 8px; border-radius: 999px; font-size: 12px; }
-      .footer { padding: 24px 0; color: var(--muted); text-align: center; font-size: 12px; }
-      @media (max-width: 600px) {
+        /* ---- Base theme tokens (Compose Web styles read these) ---- */
+        :root {
+            /* existing */
+            --fg: #222;
+            --bg: #fff;
+            --accent: #ff6600;
+            --muted: #666;
+
+            /* added for PostRowTheme / UI polish */
+            --text: var(--fg);
+            --card-bg: #ffffff;
+            --card-border: rgba(0, 0, 0, 0.08);
+            --accent-soft: color-mix(in srgb, var(--accent) 12%, transparent);
+        }
+
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --fg: #e8eaed;
+                --bg: #0f1115;
+                --muted: #9aa0a6;
+                --text: var(--fg);
+                --card-bg: #14171f;
+                --card-border: rgba(255, 255, 255, 0.08);
+                --accent-soft: color-mix(in oklab, var(--accent) 18%, transparent);
+            }
+        }
+
+        /* ---- Global resets / typography ---- */
+        html, body { height: 100%; }
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+            color: var(--fg);
+            background: var(--bg);
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            text-rendering: optimizeLegibility;
+        }
+        a { color: var(--fg); text-decoration: none; }
+        a:hover { text-decoration: underline; }
+
+        /* ---- Layout helpers ---- */
+        .container { max-width: 960px; margin: 0 auto; padding: 0 12px; }
+        .stack { display: grid; gap: 12px; }
+        .list { display: grid; gap: 8px; }
+        .row { display: flex; gap: 12px; align-items: center; }
+        .spacer { flex: 1; }
         .hide-sm { display: none; }
-      }
+        @media (min-width: 600px) { .hide-sm { display: initial; } }
+
+        /* ---- Navbar ---- */
+        .navbar { background: var(--accent); color: white; }
+        .navbar a { color: white; }
+        .navbar .brand { font-weight: 700; }
+
+        /* ---- Card & surface ---- */
+        .card {
+            background: var(--card-bg);
+            border: 1px solid var(--card-border);
+            border-radius: 12px;
+            padding: 16px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+        }
+
+        /* Slight lift on hover for any cardy surface (non-essential) */
+        @media (hover:hover) and (pointer:fine) {
+            .card:hover { transform: translateY(-1px); box-shadow: 0 6px 22px rgba(0,0,0,0.12); }
+            .card { transition: transform .18s cubic-bezier(.2,.8,.2,1), box-shadow .18s cubic-bezier(.2,.8,.2,1), border-color .18s ease; }
+        }
+
+        /* ---- Text utilities ---- */
+        .muted { color: var(--muted); }
+        .small { font-size: 12px; line-height: 1.35; }
+        .score { font-weight: 700; }
+        .linkish { color: #0645AD; }
+
+        /* ---- Badges / tags ---- */
+        .tag { background: #f0f0f0; padding: 2px 8px; border-radius: 999px; font-size: 12px; }
+        @media (prefers-color-scheme: dark) {
+            .tag { background: rgba(255,255,255,0.08); }
+        }
+
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
+
+        /* ---- Inputs & buttons ---- */
+        .input, .textarea {
+            width: 100%;
+            padding: 8px 12px;
+            border-radius: 10px;
+            border: 1px solid #ddd;
+            background: #fff;
+            color: var(--fg);
+        }
+        @media (prefers-color-scheme: dark) {
+            .input, .textarea {
+                background: #10141b;
+                border-color: rgba(255,255,255,0.12);
+                color: var(--fg);
+            }
+        }
+        .btn {
+            padding: 8px 12px;
+            border-radius: 999px;
+            border: 1px solid rgba(0,0,0,0.1);
+            background: white;
+            cursor: pointer;
+            font-weight: 600;
+        }
+        .btn:hover { background: #f5f5f5; }
+        .btn:disabled { opacity: .6; cursor: not-allowed; }
+
+        /* Variants used by UpvoteButton */
+        .btn-ghost {
+            background: transparent;
+            border-color: rgba(0,0,0,0.08);
+        }
+        .btn-ghost:hover {
+            background: var(--accent-soft);
+        }
+        .btn-compact {
+            padding: 4px 8px;
+            font-weight: 600;
+        }
+
+        /* ---- Alerts (used by Login) ---- */
+        .alert {
+            padding: 8px 12px;
+            border-radius: 10px;
+            border: 1px solid transparent;
+            font-size: 14px;
+        }
+        .alert-error {
+            color: #8b0000;
+            background: #ffecec;
+            border-color: #ffc9c9;
+        }
+        .alert-success {
+            color: #0a5f34;
+            background: #e8fff3;
+            border-color: #c6f6d5;
+        }
+        @media (prefers-color-scheme: dark) {
+            .alert-error {
+                color: #ffb3b3;
+                background: rgba(255,0,0,0.07);
+                border-color: rgba(255,0,0,0.18);
+            }
+            .alert-success {
+                color: #b5ffd8;
+                background: rgba(0,255,153,0.07);
+                border-color: rgba(0,255,153,0.18);
+            }
+        }
+
+        /* ---- Footer ---- */
+        .footer { padding: 24px 0; color: var(--muted); text-align: center; font-size: 12px; }
+
+        /* ---- Motion preferences ---- */
+        @media (prefers-reduced-motion: reduce) {
+            * { animation: none !important; transition: none !important; scroll-behavior: auto !important; }
+        }
     </style>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="/hn-clone-kotlin-web.js" defer></script>
-  </body>
+</head>
+<body>
+<div id="root"></div>
+
+<!-- IMPORTANT: Make sure this filename matches your Kotlin/JS output.
+     If Gradle emits a hashed name or different path, update it here. -->
+<script src="/hn-clone-kotlin-web.js" defer></script>
+</body>
 </html>
